--- a/_posts/2017-03-04-learning-git.html
+++ b/_posts/2017-03-04-learning-git.html
@@ -1,33 +1,24 @@
 ---
-layout: default
+layout: posts
 title: git提交与推送
+excerpt: git常用的提交、推送命令
 ---
 <h2>{{ page.title }}</h2>
-<p># 添加当前目录的所有文件到暂存区<br/>
-$ git add .
+<p># 添加当前目录的所有文件到暂存区{% highlight ruby %}$ git add .{% endhighlight %}
 </p>
-<p># 提交暂存区到仓库区<br/>
-$ git commit -m [message]
+<p># 提交暂存区到仓库区{% highlight ruby %}$ git commit -m [message]{% endhighlight %}
 </p>
-<p># 提交暂存区的指定文件到仓库区<br/>
-$ git commit [file1] [file2] ... -m [message]
+<p># 提交暂存区的指定文件到仓库区{% highlight ruby %}$ git commit [file1] [file2] ... -m [message]{% endhighlight %}
 </p>
 
 <h4>git 推送</h4>
-<p># 下载远程仓库的所有变动<br/>
-$ git fetch [remote]
+<p># 下载远程仓库的所有变动{% highlight ruby %}$ git fetch [remote]{% endhighlight %}
 </p>
-<p># 显示所有远程仓库<br/>
-$ git remote -v
+<p># 显示所有远程仓库{% highlight ruby %}$ git remote -v{% endhighlight %}
 </p>
-<p># 显示某个远程仓库的信息<br/>
-$ git remote show [remote]
+<p># 显示某个远程仓库的信息{% highlight ruby %}$ git remote show [remote]{% endhighlight %}
 </p>
-<p># 增加一个新的远程仓库，并命名<br/>
-$ git remote add [shortname] [url]
+<p># 增加一个新的远程仓库，并命名{% highlight ruby %}$ git remote add [shortname] [url]{% endhighlight %}
 </p>
-<p># 推送所有分支到远程仓库<br/>
-$ git push [remote] --all
+<p># 推送所有分支到远程仓库{% highlight ruby %}$ git push [remote] --all{% endhighlight %}
 </p>
-<hr/>
-<p>{{ page.date | date_to_string }}</p>
