--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ title: 我的 Blog
 <p> 最新文章 </p>
 <ul>
   {% for post in site.posts %}
-  <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  <li>
+    {{ post.date | date_to_string }}
+    <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+    {{ post.excerpt | remove: '<p>' | remove: '</p>' }}
+  </li>
   {% endfor %}
 </ul>
